# simplicityhl-lsp

./: .gitignore  .vscodeignore  Cargo.toml  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
client/: package-lock.json  package.json
client/src/: extension.ts
examples/: recursive_covenant.simf
src/: backend.rs  completion.rs  error.rs  expression.rs  function.rs  highlights.scm  jet.rs  main.rs  symbol_table.rs  tokens.rs  utils.rs
src/completion/: builtin.rs  jet.rs  mod.rs  tokens.rs  type_cast.rs  types.rs
