[package]
name = "simplicityhl-lsp"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
tower-lsp-server = "0.22.1"
simplicityhl = { git = "https://github.com/BlockstreamResearch/SimplicityHL.git", rev = "e68e1c6" }
dashmap = "6.1.0"
ropey = "1.6.1"
log = "0.4.28"
env_logger = "0.11.8"
miniscript = "12.3.1"
