[package]
name = "simplicityhl-lsp"
version = "0.1.3"
edition = "2024"
# TODO: add rust-version

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
tower-lsp-server = "0.22.1"

# TODO: remove in favor of HashMap pls
dashmap = "6.1.0"

log = "0.4.28"
env_logger = "0.11.8"

ropey = "1.6.1"
miniscript = "12"
simplicityhl = { git = "https://github.com/BlockstreamResearch/SimplicityHL.git", rev = "e68e1c6" }

# TODO: add `[lints.rust]` and `[lints.clippy]` pls (to enforce consistent lints across users on edition 2024)