[package]
name = "simplicityhl-lsp"
version = "0.1.3"
edition = "2024"
rust-version = "1.87"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
tower-lsp-server = "0.22.1"

log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.17"

ropey = "1.6.1"
miniscript = "12"
simplicityhl = { git = "https://github.com/BlockstreamResearch/SimplicityHL.git", rev = "e68e1c6" }
nom = "8.0.0"

[lints.rust]
unsafe_code = "deny"
unused_variables = "warn"
dead_code = "warn"
unreachable_code = "warn"
unused_mut = "warn"

[lints.clippy]
pedantic = "warn"
